# PeriodCalendar

./: CMakeLists.txt
.github/workflows/: build-windows.yaml
src/: main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
src/core/: CMakeLists.txt  calendar.cpp  calendar.h  calendar_wrapper.cpp  calendar_wrapper.h  date.h  io.cpp  io.h  types.h
